# cantaloupe

./: .gitignore  README.md  automate.yml  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: documentation.yaml  release.yaml  test.yaml
docs/: cantaloupe.commands.rst  cantaloupe.frameworks.hookspec.rst  cantaloupe.frameworks.playwright.template.rst  cantaloupe.frameworks.rst  cantaloupe.generation.generator.rst  cantaloupe.generation.rst  cantaloupe.models.rst  cantaloupe.types.rst  conf.py  modules.rst
docs/_build/: .buildinfo  cantaloupe.cli.html  cantaloupe.commands.html  cantaloupe.commands.init.html  cantaloupe.commands.make_code.html  cantaloupe.enums.html  cantaloupe.frameworks.hookspec.html  cantaloupe.frameworks.html  cantaloupe.frameworks.playwright.html  cantaloupe.frameworks.playwright.template.html  cantaloupe.frameworks.playwright.translate.html  cantaloupe.generation.generator.html  cantaloupe.generation.html  cantaloupe.html  cantaloupe.loaders.html  cantaloupe.models.html  cantaloupe.types.html  cantaloupe.utils.html  cantaloupe.utils.string_utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: cantaloupe.cli.doctree  cantaloupe.commands.doctree  cantaloupe.commands.init.doctree  cantaloupe.doctree  cantaloupe.enums.doctree  cantaloupe.frameworks.doctree  cantaloupe.frameworks.playwright.doctree  cantaloupe.frameworks.playwright.template.doctree  cantaloupe.frameworks.playwright.translate.doctree  cantaloupe.generation.doctree  cantaloupe.loaders.doctree  cantaloupe.utils.doctree  environment.pickle  index.doctree
docs/_build/_modules/: index.html
docs/_build/_sources/: cantaloupe.commands.make_code.rst.txt  cantaloupe.commands.rst.txt  cantaloupe.enums.rst.txt  cantaloupe.frameworks.rst.txt  (+5 more)
src/automate/: cli.py  enums.py  hooks.py  load.py  main.py  models.py
src/cantaloupe/: __init__.py  __main__.py  cli.py  enums.py  errors.py  hookspecs.py  host.py  loaders.py  logger.py  models.py  types.py
tests/: conftest.py  test_loaders.py
tests/generation/: test_generator.py
tests/utils/: test_slugify.py
tests/workflows/: context.yaml  workflow_1.yaml
workflows/: context.yaml  facebook-login.yaml  setup.yaml  workflow_1.yaml  workflow_2.yaml  workflow_example.yaml
(+128 files in other folders)
