[tool.poetry]
name = "cantaloupe"
version = "0.1.0"
description = ""
authors = ["Lemi Boyce <lemuelboyce@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
cantaloupe = "main:entry"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"
jinja2 = "^3.1.2"
click = "^8.1.3"
pluggy = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pyyaml = "^6.0"
black = "^22.12.0"
pytest-playwright = "^0.3.0"
isort = "^5.11.4"
pytest = "^7.2.2"
sphinx = "^6.1.3"

[tool.black]
target-version = ['py39', 'py310', 'py311']
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

